# OpenEquivariance

./: .gitignore  README.md  pyproject.toml
.github/workflows/: requirements_cuda_ci.txt
docs/: conf.py  index.rst  installation.rst  supported_ops.rst  tests_and_benchmarks.rst
examples/: readme_tutorial.py
openequivariance/: __init__.py
openequivariance/benchmark/: ConvBenchmarkSuite.py  TestBenchmarkSuite.py  benchmark_configs.py  benchmark_utils.py  correctness_utils.py  perf_metrics_utils.py  random_buffer_utils.py
openequivariance/benchmark/benchmark_routines/: paper_benchmark_uvw.py
openequivariance/benchmark/plotting/: __init__.py  plot_convolution.py  plot_double_backward.py  plot_roofline.py  plot_uvu.py  plot_uvw.py  plotting_utils.py
openequivariance/extension/: convolution.hpp  generic_module.cpp  group_mm_cuda.hpp  group_mm_hip.hpp  kernel_wrapper.cpp  libtorch_tp_jit.cpp  tensorproducts.hpp  torch_tp_jit.cpp
openequivariance/extension/util/: backend_cuda.hpp  backend_hip.hpp
openequivariance/extlib/: __init__.py
openequivariance/implementations/: CUETensorProduct.py  ComputationSchedule.py  E3NNTensorProduct.py  LoopUnrollTP.py  MultiplicityOuterProductTP.py  TensorProduct.py  TensorProductBase.py  e3nn_lite.py  utils.py
openequivariance/implementations/convolution/: CUEConv.py  ConvolutionBase.py  E3NNConv.py  LoopUnrollConv.py  TensorProductConv.py
openequivariance/implementations/symmetric_contraction/: STPOpt.py
openequivariance/templates/: jinja_utils.py  loop_unroll_batch.cuh  loop_unroll_conv_atomic.cuh  loop_unroll_conv_det.cuh  loop_unroll_tp.cuh  macros.jinja
test/: benchmark.py  mace_driver.py
tests/: batch_test.py  benchmark.py  conftest.py  conv_test.py  correctness_test.py  double_backwards_driver.py  export_test.py  import_test.py  mace_driver.py  multidevice_test.py  tp_debug.py
