[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "openequivariance"
version = "0.1.0"
authors = [
  { name="Austin Glover" },
  { name="Vivek Bharadwaj" },
  { name="Aydin Buluc" },
  { name="James Demmel" }
]
description = "A fast GPU JIT kernel generator for the Clebsch-Gordon Tensor Product"
requires-python = ">=3.10"
dependencies = [
  "ninja",
  "jinja2",
  "numpy",
  "torch",
]

[project.optional-dependencies]
bench = [
  "matplotlib",
  "tqdm",
  "e3nn",
  "cuequivariance",
  "cuequivariance-torch",
  "cuequivariance-ops-torch-cu12",
]

dev = [
  "pre-commit",
  "ruff",
  "pytest",
  "pytest-check",
  "torch_geometric",
  "cmake"
]

[tool.setuptools.packages.find]
include = ["openequivariance*"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.ruff]
lint.ignore = ["E741"]